
2009-01-15	Vladlen Y. Koshelev

	* main/OQL/Expressions/OqlQueryParameter.class.php: "in" expression supports
	arrays.

2009-01-14	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: fisherYatesShuffle()
	Fisher Yates shuffle algorithm implementation.

	* core/Base/IntervalUnit.class.php,
	core/OSQL/TimeIntervalsGenerator: support Date/DateRange types.

2009-01-10	Vladlen Y. Koshelev

	* main/OQL/Parsers/OqlTokenizer.class.php: tokenizer simplified and
	optimized using non-multibyte functions and regexps where it's possible.

2009-01-07	Vladlen Y. Koshelev

	* main/OQL/, test/main/OqlSelectClauseTest.class.php: OQL select query
	clauses separated from OQL query as independent parsers and wrappers,
	so they can be used both in Criteria statements (expressions, projections,
	etc.) and for incremental expansion of OQL query; corresponding tests
	demonstrates such cases.

	* main/OQL/Expressions/OqlQueryExpression.class.php: classes reflections
	pool added.

2008-12-30	Konstantin V. Arkhipov

	* core/Form/Primitives/IdentifiablePrimitive.class.php: type name
	changed to scalar; this one fixes non-integer identifiers in
	PrimitiveIdentifier.

2008-12-30	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveIdentifier.class.php,
	test/core/PrimitiveIdentifierTest.class.php: import handling for empty or
	non-integer values and test for empty values added.

	* main/DAOs/GenericDAO.class.php: check if identifier is scalar.

2008-12-29	Ivan Y. Khvostishkov

	* main/DAOs/GenericDAO.class.php: makeTotalCountQuery() extracted from
	worker by means of refactoring.

2008-12-26	Ivan Y. Khvostishkov

	* main/DAOs/GenericDAO.class.php, test/misc/DAOTest.class.php:
	preserve object's persistence during manipulations with identity map;
	unit test for covering such change.

2008-12-24	Vladlen Y. Koshelev

	* core/Base/Assert.class.php: isNotEmpty() added, checkInteger() checks for
	leading zero (ported from 1.0).
