@@ -39,6 +39,11 @@
 	* core/Base/IntervalUnit.class.php,
 	core/OSQL/TimeIntervalsGenerator: support Date/DateRange types.
 
+2009-01-28	Ivan Y. Khvostishkov
+
+	* main/Base/DateRange.class.php: safeSetStart(), safeSetEnd() to ensure
+	that the start will never overlaps the end.
+
 2009-01-10	Vladlen Y. Koshelev
 
 	* main/OQL/Parsers/OqlTokenizer.class.php: tokenizer simplified and
